# code_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODING_AGENT.md  LICENSE  README.md  SPECS.md  demo.py  hello.py  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  server.py
docs/: 1.md  ARCHITECTURE.md  CONFIG.md  DESIGN-unfinished-6ACs.md  PR-01-event-bus-hooks.md  PR-02-tdd-state-machine.md  PR-03-task-state-machine.md  PR-04-semantic-memory.md  PR-05-repomap-injection.md  PR-06-sdd-parser.md  PR-07-orchestrator-pm.md  PR-08-audit-log.md  PR-09-evaluator-agent.md  PR-10-opentelemetry.md  PR-11-dual-agent-review.md  PR-12-ab-testing.md  PR-13-progress-anchor.md  PR-TEST-REPORT.md  SPEC-ARCHITECTURE.md  SPEC-P0.md  SPEC-P1.md  TOOLS.md  code-review-issues.md  gap-analysis.md  参考.md
index/: __init__.py  code_indexer.py  codmap.py  retriever.py
skills/: setup-pytest.md
tests/: conftest.py  test_ab_test.py  test_audit_log.py  test_cli.py  test_cli_plan_flags.py  test_code_indexer_persistence.py  test_code_indexer_semantic.py  test_code_search_tool.py  test_codmap.py  test_config.py  test_context_window.py  test_dual_review.py  test_embeddings.py  test_engine.py  test_engine_ab.py  test_engine_audit.py  test_engine_codmap.py  test_engine_dual_review.py  test_engine_evaluator.py  test_engine_hooks.py  test_engine_orchestrator.py  test_engine_otel.py  test_engine_pr_integration.py  test_engine_progress.py  test_engine_run.py  test_engine_spec.py  test_error_recovery.py  test_evaluator.py  test_event_bus.py  test_evolution.py  test_grep.py  (+53 more)
(+100 files in other folders)
